@@ -1,3 +1,6 @@
+2005-12-19 Craig Franklin <craigfranklin@users.sourceforge.net>
+  * [gpasm] Fixed 18xx config bug when config the last section.
+
 2005-10-13 Craig Franklin <craigfranklin@users.sourceforge.net>
   * [gputils] Fixed bsr boundary for 18f2455/2550/4455/4550.
 
